Recover personality file function
1 VIO4.1 could inject personality file in R2 release
2 The VFC API is not clear if we deprecated personality file
to use userdata or metadata. If the API finally could be suitable,
Then I will update those code.

Issue-ID: MULTICLOUD-227
